Fri Oct  1 15:47:01 1999  Brian Gough  <bjg@network-theory.co.uk>

	* file.c file2d.c: converted to use new block i/o functions

Wed Aug 18 11:41:40 1999  Brian Gough  <bjg@network-theory.co.uk>

	* eliminated obvious memory leaks from the tests, so that we can
 	check that the _free functions work correctly

	* gsl-histogram.c (main): removed unused variable

Fri Aug  6 11:19:37 1999  Brian Gough  <bjg@network-theory.co.uk>

	* removed dependence on rand() and RAND_MAX

1999-08-05  Mark Galassi  <rosalia@lanl.gov>

	* gsl-histogram.c (main): fixed a simple logic bug.  Thanks to
	Barak Pearlmutter (bap@cs.unm.edu) for the patch.

1998-11-06    <bjg@ancho.lanl.gov>

	* used a cast of (int) when attempting to print size_t variables
	with %d

Wed Sep 16 15:08:59 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* gsl-histogram.c (main): made the number of bins
 	optional. If you don't specify it then it uses bins of width 1.

